--- a/multatva/src/main/resources/application.properties
+++ b/multatva/src/main/resources/application.properties
@@ -1,13 +1,15 @@
-# === H2 Configuration ===
-spring.datasource.url=jdbc:h2:mem:ekartdb
+# H2 Console enabled
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# H2 DB connection
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
+# JPA / Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-# H2 Console
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
